# wecom-msg-audit-mcp

./: .env.example  .gitignore  LICENSE  README.md  fastmcp.json  group_chat.py  main.py  mcp_server.py  pyproject.toml  requirements.txt  restart.sh  test_mcp_all.py  wecom_core.py
